test/mutation_analysis/s0171_excel_sheet_column_number/hafis/ablation_o3_full/mutants/6/result.txt
./test/mutation_analysis/s0171_excel_sheet_column_number/hafis/ablation_o3_full/mutants/6/Solution.java:17: error: unreachable statement
        return num;
        ^
1 error
